--- a/week-5/talley-sequence-game.html
+++ b/week-5/talley-sequence-game.html
@@ -36,8 +36,8 @@ All Things JavaScript, LLC. (2017, July 5). JavaScript Problem: Computing a Fibo
       <div class="container">
       <h1 id="game-header">Welcome to the number sequence game!</h1>
 
-      <div id="card">
-        <div id="card-title"> </div>
+      <div class="card">
+        <div class="card-title"> </div>
         <br />
         <form class= "drop-down-menu" id="drop-down-menu">
   <label for="sequence">Choose a number sequence:</label>
